heder and hero inited

--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <img src="/img/header__logo.png">
+
+        <nav class="header__nav top-nav">
+            <ul class="top-nav__list">
+                <li class="top-nav__item"><a href class="top-nav__link">О нас</a></li>
+                <li class="top-nav__item"><a href class="top-nav__link">Проекты</a></li>
+                <li class="top-nav__item"><a href class="top-nav__link">Этапы</a></li>
+                <li class="top-nav__item"><a href class="top-nav__link">Отзывы</a></li>
+                <li class="top-nav__item"><a href class="top-nav__link">Контакты</a></li>
+                <li class="top-nav__item"><div class="top-nav__search-icon" alt="Поиск"></div></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="hero">
+            <div class="container hero__container">
+                <div class="hero__heading">Проектные решения любой сложности</div>
+                <div class="hero__content">Есть над чем задуматься: базовые сценарии поведения пользователей и по сей день остаются уделом проектантов</div>
+                <a href class="button hero__button">Заказать расчет</a>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
