header box-shadow is behind the hero section --fixed

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </ul>
         </nav>
     </header>
+    <div class="header__spacer"></div>
     <main>
         <section class="hero">
             <div class="container hero__container">
