header__container fix

--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
 </head>
 <body>
     <header class="header">
-        <img src="/img/header__logo.png">
+        <div class="container header__container">
+            <img src="/img/header__logo.png">
 
-        <nav class="header__nav top-nav">
-            <ul class="top-nav__list">
-                <li class="top-nav__item"><a href class="top-nav__link">О нас</a></li>
-                <li class="top-nav__item"><a href class="top-nav__link">Проекты</a></li>
-                <li class="top-nav__item"><a href class="top-nav__link">Этапы</a></li>
-                <li class="top-nav__item"><a href class="top-nav__link">Отзывы</a></li>
-                <li class="top-nav__item"><a href class="top-nav__link">Контакты</a></li>
-                <li class="top-nav__item"><div class="top-nav__search-icon" alt="Поиск"></div></li>
-            </ul>
-        </nav>
+            <nav class="header__nav top-nav">
+                <ul class="top-nav__list">
+                    <li class="top-nav__item"><a href class="top-nav__link">О нас</a></li>
+                    <li class="top-nav__item"><a href class="top-nav__link">Проекты</a></li>
+                    <li class="top-nav__item"><a href class="top-nav__link">Этапы</a></li>
+                    <li class="top-nav__item"><a href class="top-nav__link">Отзывы</a></li>
+                    <li class="top-nav__item"><a href class="top-nav__link">Контакты</a></li>
+                    <li class="top-nav__item"><div class="top-nav__search-icon" alt="Поиск"></div></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <div class="header__spacer"></div>
     <main>
