section hero semantic tags fix

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <main>
         <section class="hero">
             <div class="container hero__container">
-                <div class="hero__heading">Проектные решения любой сложности</div>
-                <div class="hero__content">Есть над чем задуматься: базовые сценарии поведения пользователей и по сей день остаются уделом проектантов</div>
+                <h1 class="hero__heading">Проектные решения любой сложности</h1>
+                <p class="hero__content">Есть над чем задуматься: базовые сценарии поведения пользователей и по сей день остаются уделом проектантов</p>
                 <a href class="button hero__button">Заказать расчет</a>
             </div>
         </section>
