header link added; header wrong paddings fixed

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
     <header class="header">
         <div class="container header__container">
-            <img src="/img/header__logo.png">
-
+            <a href="/">
+                <img src="/img/header__logo.png">
+            </a>
+            
             <nav class="header__nav top-nav">
                 <ul class="top-nav__list">
                     <li class="top-nav__item"><a href class="top-nav__link">О нас</a></li>
@@ -39,6 +41,12 @@
                 <h1 class="hero__heading">Проектные решения любой сложности</h1>
                 <p class="hero__content">Есть над чем задуматься: базовые сценарии поведения пользователей и по сей день остаются уделом проектантов</p>
                 <a href class="button hero__button">Заказать расчет</a>
+            </div>
+        </section>
+        <section class="about">
+            <div class="container about__container">
+                <h2 class="section-heading about__heading">О нас</h2>
+                <p class="section-content about__content">Также как перспективное планирование создаёт необходимость включения в производственный план целого ряда внеочередных мероприятий с учётом комплекса экспериментов, поражающих по своей масштабности и грандиозности. А также диаграммы связей могут быть описаны максимально подробно. Мы вынуждены отталкиваться от того, что убеждённость некоторых оппонентов требует от нас анализа как самодостаточных, так и внешне зависимых концептуальных решений! Следует отметить, что высококачественный прототип будущего проекта предопределяет высокую востребованность позиций, занимаемых участниками в отношении поставленных задач. Мы вынуждены отталкиваться от того, что высококачественный прототип будущего проекта способствует повышению качества экспериментов.</p>
             </div>
         </section>
     </main>
