--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
             </nav>
         </div>
     </header>
-    <div class="header__spacer"></div>
     <main>
         <section class="hero">
             <div class="container hero__container">
@@ -47,6 +46,30 @@
             <div class="container about__container">
                 <h2 class="section-heading about__heading">О нас</h2>
                 <p class="section-content about__content">Также как перспективное планирование создаёт необходимость включения в производственный план целого ряда внеочередных мероприятий с учётом комплекса экспериментов, поражающих по своей масштабности и грандиозности. А также диаграммы связей могут быть описаны максимально подробно. Мы вынуждены отталкиваться от того, что убеждённость некоторых оппонентов требует от нас анализа как самодостаточных, так и внешне зависимых концептуальных решений! Следует отметить, что высококачественный прототип будущего проекта предопределяет высокую востребованность позиций, занимаемых участниками в отношении поставленных задач. Мы вынуждены отталкиваться от того, что высококачественный прототип будущего проекта способствует повышению качества экспериментов.</p>
+
+                <div class="about__card-block">
+                    <div class="about__card-block-left">
+                        <div class="about__card-block-left-content">
+                            <p class="about__card-block-left-text">
+                                Принимая во внимание показатели успешности, перспективное планирование способствует подготовке и реализации новых принципов.
+                            </p>
+                            <a href class="button transparent-button-orange about__card-block-left__button">Подробнее</a>
+                        </div>
+                        
+                    </div>
+                    <div class="about__card-block-right">
+                        <div class="about__card card1">
+                            <div class="card1__picture card1__img-box"></div>
+                            <h3 class="card1__heading">Консультация с широким активом</h3>
+                            <div class="card1__content">А также свежий взгляд на привычные вещи - безусловно открывает новые горизонты для как самодостаточных, так и внешне зависимых концептуальных решений.</div>
+                        </div>
+                        <div class="about__card card1">
+                            <div class="card1__picture card1__img-mechanism"></div>
+                            <h3 class="card1__heading">В своём стремлении повысить</h3>
+                            <div class="card1__content">Качество жизни, они забывают, что сплочённость команды профессионалов представляет собой интересный эксперимент проверки прогресса профессионального сообщества.</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
