--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section class="about">
             <div class="container about__container">
                 <h2 class="section-heading about__heading">О нас</h2>
-                <p class="section-content about__content">Также как перспективное планирование создаёт необходимость включения в производственный план целого ряда внеочередных мероприятий с учётом комплекса экспериментов, поражающих по своей масштабности и грандиозности. А также диаграммы связей могут быть описаны максимально подробно. Мы вынуждены отталкиваться от того, что убеждённость некоторых оппонентов требует от нас анализа как самодостаточных, так и внешне зависимых концептуальных решений! Следует отметить, что высококачественный прототип будущего проекта предопределяет высокую востребованность позиций, занимаемых участниками в отношении поставленных задач. Мы вынуждены отталкиваться от того, что высококачественный прототип будущего проекта способствует повышению качества экспериментов.</p>
+                <p class="section-content-font about__content">Также как перспективное планирование создаёт необходимость включения в производственный план целого ряда внеочередных мероприятий с учётом комплекса экспериментов, поражающих по своей масштабности и грандиозности. А также диаграммы связей могут быть описаны максимально подробно. Мы вынуждены отталкиваться от того, что убеждённость некоторых оппонентов требует от нас анализа как самодостаточных, так и внешне зависимых концептуальных решений! Следует отметить, что высококачественный прототип будущего проекта предопределяет высокую востребованность позиций, занимаемых участниками в отношении поставленных задач. Мы вынуждены отталкиваться от того, что высококачественный прототип будущего проекта способствует повышению качества экспериментов.</p>
 
                 <div class="about__card-block">
                     <div class="about__card-block-left">
@@ -58,18 +58,119 @@
                         
                     </div>
                     <div class="about__card-block-right">
-                        <div class="about__card card1">
-                            <div class="card1__picture card1__img-box"></div>
-                            <h3 class="card1__heading">Консультация с широким активом</h3>
-                            <div class="card1__content">А также свежий взгляд на привычные вещи - безусловно открывает новые горизонты для как самодостаточных, так и внешне зависимых концептуальных решений.</div>
+                        <div class="about__card card1 card1__img-box">
+                            <h3 class="card1__heading subheading">Консультация с широким активом</h3>
+                            <div class="section-content-font card1__content">А также свежий взгляд на привычные вещи - безусловно открывает новые горизонты для как самодостаточных, так и внешне зависимых концептуальных решений.</div>
                         </div>
-                        <div class="about__card card1">
-                            <div class="card1__picture card1__img-mechanism"></div>
-                            <h3 class="card1__heading">В своём стремлении повысить</h3>
-                            <div class="card1__content">Качество жизни, они забывают, что сплочённость команды профессионалов представляет собой интересный эксперимент проверки прогресса профессионального сообщества.</div>
+                        <div class="about__card card1 card1__img-mechanism">
+                            <h3 class="card1__heading subheading">В своём стремлении повысить</h3>
+                            <div class="section-content-font card1__content">Качество жизни, они забывают, что сплочённость команды профессионалов представляет собой интересный эксперимент проверки прогресса профессионального сообщества.</div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="how-we-work" id="how-we-work">
+            <div class="container how-we-work__container">
+                <h2 class="section-heading how-we-work__heading">
+                    Как мы работаем
+                </h2>
+                <div class="how-we-work__steps work-steps">
+                    <a href="#how-we-work" class="work-steps__step work-steps__active">1 шаг</a>
+                    <a href="#how-we-work" class="work-steps__step">2 шаг</a>
+                    <a href="#how-we-work" class="work-steps__step">3 шаг</a>
+                    <a href="#how-we-work" class="work-steps__step">4 шаг</a>
+                </div>
+                <div class="how-we-work__slides">
+                    <div class="how-we-work__slide">
+                        <h3 class="how-we-work__subheading subheading">Проводим консультацию</h3>
+                        <p class="how-we-work__content section-content-font">
+                            Влечет за собой процесс внедрения и модернизации приоритизации разума над эмоциями. В рамках спецификации современных стандартов, некоторые особенности внутренней политики будут объективно рассмотрены соответствующими инстанциями. А также представители современных социальных резервов, инициированные исключительно синтетически, ограничены исключительно образом мышления. Являясь всего лишь частью общей картины, реплицированные с зарубежных источников, современные исследования подвергнуты целой серии независимых исследований. Кстати,  стремящиеся вытеснить традиционное производство, нанотехнологии освещают чрезвычайно интересные особенности картины в целом, однако конкретные выводы, разумеется, призваны к ответу.
+                        </p>
+                    </div>
+
+                    <div class="how-we-work__slide">
+                        <h3 class="how-we-work__subheading subheading">Составляем смету</h3>
+                        <p class="how-we-work__content section-content-font">
+                            Внедрения и модернизации приоритизации разума над эмоциями. В рамках спецификации современных стандартов, некоторые особенности внутренней политики будут объективно рассмотрены соответствующими инстанциями. А также представители современных социальных резервов, инициированные исключительно синтетически, ограничены исключительно образом мышления. Являясь всего лишь частью общей картины, реплицированные с зарубежных источников, современные исследования подвергнуты целой серии независимых исследований.
+                        </p>
+                    </div>
+
+                    <div class="how-we-work__slide">
+                        <h3 class="how-we-work__subheading subheading">Привлекаем подрядчиков</h3>
+                        <p class="how-we-work__content section-content-font">
+                            Идейные соображения высшего порядка, а также новая модель организационной деятельности требует анализа прогресса профессионального сообщества. Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: высококачественный прототип будущего проекта напрямую зависит от дальнейших направлений развития. Разнообразный и богатый опыт говорит нам, что новая модель организационной деятельности говорит о возможностях системы массового участия. Принимая во внимание показатели успешности, постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет выполнить важные задания по разработке прогресса профессионального сообщества.
+                        </p>
+                    </div>
+
+                    <div class="how-we-work__slide">
+                        <h3 class="how-we-work__subheading subheading">Инспектируем все этапы работ</h3>
+                        <p class="how-we-work__content section-content-font">
+                            Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: высококачественный прототип будущего проекта напрямую зависит от дальнейших направлений развития. Разнообразный и богатый опыт говорит нам, что новая модель организационной деятельности говорит о возможностях системы массового участия. Принимая во внимание показатели успешности, постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет.
+                        </p>
+                    </div>
+                    <div class="how-we-work__buttons">
+                        <a href class="button button2 how-we-work__button">Подробнее</a>
+                        <a href class="button transparent-button-gray how-we-work__button">Договор</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="faq">
+            <div class="container faq__container">
+                <h2 class="section-heading faq__heading">Часто задаваемые вопросы</h2>
+                <ul class="faq__list">
+                    <li class="faq__item">
+                        <div class="subheading faq__item-subheading">Из чего формируется конечная стоимость проекта?</div>
+                        <svg class="faq__spoiler-button" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <ellipse cx="25" cy="25" rx="25" ry="25" fill="#ECECEC"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z" fill="#666666"/>
+                        </svg>
+                        <div class="section-content-font faq__item-content">
+                            Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к новым свершениям, которые, в свою очередь, должны быть своевременно верифицированы. Но высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и морали. И нет сомнений, что явные признаки победы институционализации призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны как претенденты на роль ключевых факторов. Приятно, граждане, наблюдать, как некоторые особенности внутренней политики могут быть призваны к ответу. Явные признаки победы институционализации набирают популярность среди определенных слоев населения, а значит, должны быть объединены в целые кластеры себе подобных. Банальные, но неопровержимые выводы, а также многие известные личности призывают нас к новым свершениям, которые, в свою очередь, должны быть представлены в исключительно положительном свете. 
+                        </div>
+                    </li>
+                    <li class="faq__item">
+                        <div class="subheading faq__item-subheading">У меня есть свой проект. Сможем ли мы его доработать / реализовать?</div>
+                        <svg class="faq__spoiler-button" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <ellipse cx="25" cy="25" rx="25" ry="25" fill="#ECECEC"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z" fill="#666666"/>
+                        </svg>
+                        <div class="section-content-font faq__item-content">
+                            Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к новым свершениям, которые, в свою очередь, должны быть своевременно верифицированы. Но высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и морали. И нет сомнений, что явные признаки победы институционализации призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны как претенденты на роль ключевых факторов. Приятно, граждане, наблюдать, как некоторые особенности внутренней политики могут быть призваны к ответу. Явные признаки победы институционализации набирают популярность среди определенных слоев населения, а значит, должны быть объединены в целые кластеры себе подобных. Банальные, но неопровержимые выводы, а также многие известные личности призывают нас к новым свершениям, которые, в свою очередь, должны быть представлены в исключительно положительном свете. 
+                        </div>
+                    </li>
+                    <li class="faq__item">
+                        <div class="subheading faq__item-subheading">Я выбираю между разными компаниями. В чём ваше отличие?</div>
+                        <svg class="faq__spoiler-button" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <ellipse cx="25" cy="25" rx="25" ry="25" fill="#ECECEC"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z" fill="#666666"/>
+                        </svg>
+                        <div class="section-content-font faq__item-content">
+                            Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к новым свершениям, которые, в свою очередь, должны быть своевременно верифицированы. Но высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и морали. И нет сомнений, что явные признаки победы институционализации призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны как претенденты на роль ключевых факторов. Приятно, граждане, наблюдать, как некоторые особенности внутренней политики могут быть призваны к ответу. Явные признаки победы институционализации набирают популярность среди определенных слоев населения, а значит, должны быть объединены в целые кластеры себе подобных. Банальные, но неопровержимые выводы, а также многие известные личности призывают нас к новым свершениям, которые, в свою очередь, должны быть представлены в исключительно положительном свете. 
+                        </div>
+                    </li>
+                    <li class="faq__item">
+                        <div class="subheading faq__item-subheading">Могу ли я делегировать вам работу / согласование с подрядчиком / организацией?</div>
+                        <svg class="faq__spoiler-button" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <ellipse cx="25" cy="25" rx="25" ry="25" fill="#ECECEC"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z" fill="#666666"/>
+                        </svg>
+                        <div class="section-content-font faq__item-content">
+                            Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к новым свершениям, которые, в свою очередь, должны быть своевременно верифицированы. Но высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и морали. И нет сомнений, что явные признаки победы институционализации призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны как претенденты на роль ключевых факторов. Приятно, граждане, наблюдать, как некоторые особенности внутренней политики могут быть призваны к ответу. Явные признаки победы институционализации набирают популярность среди определенных слоев населения, а значит, должны быть объединены в целые кластеры себе подобных. Банальные, но неопровержимые выводы, а также многие известные личности призывают нас к новым свершениям, которые, в свою очередь, должны быть представлены в исключительно положительном свете. 
+                        </div>
+                    </li>
+                    <li class="faq__item">
+                        <div class="subheading faq__item-subheading">Могу ли я вернуть деньги на каком-либо из этапов работ?</div>
+                        <svg class="faq__spoiler-button" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <ellipse cx="25" cy="25" rx="25" ry="25" fill="#ECECEC"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z" fill="#666666"/>
+                        </svg>
+                        <div class="section-content-font faq__item-content">
+                            Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к новым свершениям, которые, в свою очередь, должны быть своевременно верифицированы. Но высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и морали. И нет сомнений, что явные признаки победы институционализации призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны как претенденты на роль ключевых факторов. Приятно, граждане, наблюдать, как некоторые особенности внутренней политики могут быть призваны к ответу. Явные признаки победы институционализации набирают популярность среди определенных слоев населения, а значит, должны быть объединены в целые кластеры себе подобных. Банальные, но неопровержимые выводы, а также многие известные личности призывают нас к новым свершениям, которые, в свою очередь, должны быть представлены в исключительно положительном свете. 
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
