footer build update

--- a/index.html
+++ b/index.html
@@ -175,5 +175,50 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="container footer__container">
+            <div class="footer__left">
+                <a href="/" class="footer__logo"></a>
+                <ul class="footer-nav__list">
+                    <li class="footer-nav__item">
+                        <a href class="footer-nav__link">О нас</a>
+                    </li>
+                    <li class="footer-nav__item">
+                        <a href class="footer-nav__link">Проекты</a>
+                    </li>
+                    <li class="footer-nav__item">
+                        <a href class="footer-nav__link">Отзывы</a>
+                    </li>
+                    <li class="footer-nav__item">
+                        <a href class="footer-nav__link">Договор оферты</a>
+                    </li>
+                    <li class="footer-nav__item">
+                        <a href class="footer-nav__link">Договор подряда</a>
+                    </li>
+                    <li class="footer-nav__item">
+                        <a href class="footer-nav__link">Конфиденциальность</a>
+                    </li>
+                    <li class="footer-nav__item">
+                        <a href class="footer-nav__link">Партнёрское соглашение</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__center">
+                <h2 class="section-heading footer__heading">Оставить заявку</h2>
+                <form class="footer-form" method="post" action="/">
+                    <input class="footer-form__text-input" type="text" name="name" placeholder="Фамилия, имя и отчество*">
+                    <input class="footer-form__text-input" type="email" name="email" placeholder="E-mail*">
+                    <textarea class="footer-form__text-input footer-form__textarea" name="message" placeholder="Сообщение"></textarea>
+                    <button class="button button2 footer-form__submit">Отправить данные</button>
+                    <span class="footer-form__checkbox-area"><input class="footer-form__checkbox" type="checkbox">Отправить данные</span>
+                </form>
+            </div>
+            <div class="footer__right">
+                <p class="section-content-font footer__content">
+                    Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: разбавленное изрядной долей эмпатии, рациональное мышление позволяет оценить значение модели развития. Таким образом, консультация с широким активом обеспечивает широкому кругу (специалистов) участие в формировании стандартных подходов. 
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
