--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="container hero__container">
                 <h1 class="hero__heading">Проектные решения любой сложности</h1>
                 <p class="hero__content">Есть над чем задуматься: базовые сценарии поведения пользователей и по сей день остаются уделом проектантов</p>
-                <a href class="button hero__button">Заказать расчет</a>
+                <a href class="button hero__button">Заказать расчёт</a>
             </div>
         </section>
         <section class="about">
@@ -85,7 +85,7 @@
                     <div class="how-we-work__slide">
                         <h3 class="how-we-work__subheading subheading">Проводим консультацию</h3>
                         <p class="how-we-work__content section-content-font">
-                            Влечет за собой процесс внедрения и модернизации приоритизации разума над эмоциями. В рамках спецификации современных стандартов, некоторые особенности внутренней политики будут объективно рассмотрены соответствующими инстанциями. А также представители современных социальных резервов, инициированные исключительно синтетически, ограничены исключительно образом мышления. Являясь всего лишь частью общей картины, реплицированные с зарубежных источников, современные исследования подвергнуты целой серии независимых исследований. Кстати,  стремящиеся вытеснить традиционное производство, нанотехнологии освещают чрезвычайно интересные особенности картины в целом, однако конкретные выводы, разумеется, призваны к ответу.
+                            Влечет за собой процесс внедрения и модернизации приоритизации разума над эмоциями. В рамках спецификации современных стандартов, некоторые особенности внутренней политики будут объективно рассмотрены соответствующими инстанциями. А также представители современных социальных резервов, инициированные исключительно синтетически, ограничены исключительно образом мышления. Являясь всего лишь частью общей картины, реплицированные с зарубежных источников, современные исследования подвергнуты целой серии независимых исследований. Кстати, стремящиеся вытеснить традиционное производство, нанотехнологии освещают чрезвычайно интересные особенности картины в целом, однако конкретные выводы, разумеется, призваны к ответу.
                         </p>
                     </div>
 
