--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </div>
                     </li>
                     <li class="faq__item">
-                        <div class="subheading faq__item-subheading">У меня есть свой проект. Сможем ли мы его доработать / реализовать?</div>
+                        <div class="subheading faq__item-subheading">У меня есть свой проект. Сможем ли мы его доработать <span class="gray-text">/</span> реализовать?</div>
                         <svg class="faq__spoiler-button" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <ellipse class="faq__ellipse" cx="25" cy="25" rx="25" ry="25" fill="#ECECEC"/>
                             <path class="faq__plus" fill-rule="evenodd" clip-rule="evenodd" d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z" fill="#666666"/>
@@ -151,7 +151,7 @@
                         </div>
                     </li>
                     <li class="faq__item">
-                        <div class="subheading faq__item-subheading">Могу ли я делегировать вам работу / согласование с подрядчиком / организацией?</div>
+                        <div class="subheading faq__item-subheading">Могу ли я делегировать вам работу <span class="gray-text">/</span> согласование с подрядчиком <span class="gray-text">/</span> организацией?</div>
                         <svg class="faq__spoiler-button" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <ellipse class="faq__ellipse" cx="25" cy="25" rx="25" ry="25" fill="#ECECEC"/>
                             <path class="faq__plus" fill-rule="evenodd" clip-rule="evenodd" d="M25.0571 24.0571L25.0571 9L25.9429 9L25.9429 24.0571L33.8835 24.0571L41 24.0571L41 24.9429L25.9429 24.9429L25.9429 40L25.0571 40L25.0571 24.9429L10 24.9429L10 24.0571L25.0571 24.0571Z" fill="#666666"/>
