--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 <body>
     <header class="header">
         <div class="container header__container">
+            <div class="header__burger">
+                <svg width="30" height="23" viewBox="0 0 30 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect width="30" height="3" fill="#333333"/>
+                    <rect y="10" width="30" height="3" fill="#333333"/>
+                    <rect y="20" width="30" height="3" fill="#333333"/>
+                </svg>                    
+            </div>
             <a href="/">
                 <img src="/img/header__logo.png">
             </a>
@@ -22,14 +29,12 @@
                     <li class="top-nav__item"><a href class="top-nav__link">Этапы</a></li>
                     <li class="top-nav__item"><a href class="top-nav__link">Отзывы</a></li>
                     <li class="top-nav__item"><a href class="top-nav__link">Контакты</a></li>
-                    <li class="top-nav__item">
                         <button class="top-nav__search-button">
                             <svg class="top-nav__search-icon" alt="Поиск" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <rect width="7.56126" height="1.89031" transform="matrix(0.713342 0.700816 -0.713342 0.700816 18.6062 17.3762)" fill="#333333"/>
                                 <path d="M20.9303 10.7726C20.9303 16.1533 16.4855 20.5452 10.9652 20.5452C5.44478 20.5452 1 16.1533 1 10.7726C1 5.39198 5.44478 1 10.9652 1C16.4855 1 20.9303 5.39198 20.9303 10.7726Z" stroke="#333333" stroke-width="2"/>
                             </svg>
                         </button>
-                    </li>
                 </ul>
             </nav>
         </div>
