flex-box redirections; layout adapted to the resolution

--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
                             </p>
                             <a href class="button transparent-button-orange about__card-block-left__button">Подробнее</a>
                         </div>
-                        
+                    </div>
+                    <div class="about__card-block-left-content-outer">
+                        <p class="about__card-block-left-text">
+                            Принимая во внимание показатели успешности, перспективное планирование способствует подготовке и реализации новых принципов.
+                        </p>
+                        <a href class="button transparent-button-orange about__card-block-left__button">Подробнее</a>
                     </div>
                     <div class="about__card-block-right">
                         <div class="about__card card1 card1__img-box">
