favicon added; top-burger update;

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Евклид - Проектные Системы</title>
+    <link rel="icon" type="image/vnd.microsoft.icon" href="/img/favicon.ico" />
     <link rel="stylesheet" href="/css/normalize.css">
     <!-- work slides -->
     <script src="/script/how-we-work__slides.js"></script>
@@ -23,7 +24,7 @@
 <body>
     <header class="header">
         <div class="container header__container">
-            <div class="header__burger">
+            <div tabindex="0" class="header__burger">
                 <svg width="30" height="23" viewBox="0 0 30 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <rect width="30" height="3" fill="#333333"/>
                     <rect y="10" width="30" height="3" fill="#333333"/>
