absolute paths replaced by relative

--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Евклид - Проектные Системы</title>
-    <link rel="icon" type="image/vnd.microsoft.icon" href="/img/favicon.ico" />
-    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicon.ico" />
+    <link rel="stylesheet" href="css/normalize.css">
     <!-- work slides -->
-    <script src="/script/how-we-work__slides.js"></script>
+    <script src="script/how-we-work__slides.js"></script>
     <!-- swiper -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <script src="/script/swiper-init.js"></script>
+    <script src="script/swiper-init.js"></script>
     <link rel="stylesheet" href="/css/swiper-custom.css">
     <!-- accordion -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
-    <script src="/script/accordion.js"></script>
+    <script src="script/accordion.js"></script>
     <!-- burger -->
-    <script src="/script/top-nav-burger.js"></script>
+    <script src="script/top-nav-burger.js"></script>
     <!-- main styles -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
@@ -34,7 +34,7 @@
                 </svg>                    
             </div>
             <a href="/" aria-label="На главную">
-                <img class="header__logo" alt="Логотип" src="/img/header__logo.png">
+                <img class="header__logo" alt="Логотип" src="img/header__logo.png">
             </a>
             
             <nav class="header__nav top-nav">
